--- a/.github/workflows/wf_Windows.yml
+++ b/.github/workflows/wf_Windows.yml
@@ -43,6 +43,12 @@ jobs:
     - name: Bootstrap
       shell: powershell
       run: ./actions_bootstrap.ps1
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     - name: Test and Build
       shell: powershell
       run: Invoke-Build -File .\src\PSAppDeployToolkit.build.ps1
