--- a/.github/workflows/wf_Windows_Core.yml
+++ b/.github/workflows/wf_Windows_Core.yml
@@ -37,6 +37,12 @@ jobs:
     - name: Bootstrap
       shell: pwsh
       run: ./actions_bootstrap.ps1
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
     - name: Test and Build
       shell: pwsh
       run: Invoke-Build -File .\src\PSAppDeployToolkit.build.ps1
