--- a/.github/workflows/wf_Windows.yml
+++ b/.github/workflows/wf_Windows.yml
@@ -46,6 +46,8 @@ jobs:
     - name: Bootstrap
       shell: powershell
       run: ./actions_bootstrap.ps1
+    - name: Install AzureSignTool
+      run: dotnet tool install --global azuresigntool
     - name: Azure Login
       uses: azure/login@v2
       with:
