Disable auto hashtable alignment, set default engine to Windows PowerShell

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,7 @@
     "powershell.scriptAnalysis.settingsPath": "PSScriptAnalyzerSettings.psd1",
     // specifies the PowerShell coding style used in this project (https://github.com/PoshCode/PowerShellPracticeAndStyle/issues/81)
     "powershell.codeFormatting.preset": "Allman",
+    "powershell.codeFormatting.alignPropertyValuePairs": false,
+    "powershell.powerShellDefaultVersion": "Windows PowerShell (x64)",
     "dotnet.preferCSharpExtension": true
 }
