Only sign into Azure and code sign if on main branch, add error handling around azuresigntool

--- a/.github/workflows/wf_Windows.yml
+++ b/.github/workflows/wf_Windows.yml
@@ -34,6 +34,7 @@ jobs:
       shell: powershell
       run: $PSVersionTable
     - name: Azure Login
+      if: github.ref == 'refs/heads/main'
       uses: azure/login@v2
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
