--- a/Sources/PSADT/PSADT/PSADT.csproj
+++ b/Sources/PSADT/PSADT/PSADT.csproj
@@ -5,6 +5,7 @@
 		<RootNamespace>PSADT</RootNamespace>
 		<AssemblyName>PSADT</AssemblyName>
 		<NoWarn>$(NoWarn);CA1416;CS4014</NoWarn>
+		<UseWindowsForms>true</UseWindowsForms>
 
 		<AssemblyVersion>3.91.0.0</AssemblyVersion>
 		<FileVersion>3.91.0</FileVersion>
@@ -70,10 +71,7 @@
 			<HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\System.Management.Automation\v4.0_3.0.0.0__31bf3856ad364e35\System.Management.Automation.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
-		<Reference Include="System.Management.Automation" Condition="'$(TargetFramework)' == 'net461'">
-			<HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\System.DirectoryServices\v4.0_4.0.0.0__b03f5f7f11d50a3a\System.DirectoryServices.dll</HintPath>
-			<Private>False</Private>
-		</Reference>
+		<Reference Include="System.DirectoryServices" />
 	</ItemGroup>
 
 </Project>
