--- a/Sources/PSADT/PSADT/PSADT.csproj
+++ b/Sources/PSADT/PSADT/PSADT.csproj
@@ -71,7 +71,11 @@
 			<HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\System.Management.Automation\v4.0_3.0.0.0__31bf3856ad364e35\System.Management.Automation.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
-		<Reference Include="System.DirectoryServices" />
+		<Reference Include="System.Runtime.InteropServices.RuntimeInformation" Condition="'$(TargetFramework)' == 'net461'">
+			<HintPath>..\..\lib\microsoft.net.build.extensions\2.2.101\msbuildExtensions\Microsoft\Microsoft.NET.Build.Extensions\net461\lib\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="System.DirectoryServices" Condition="'$(TargetFramework)' == 'net461'" />
 	</ItemGroup>
 
 </Project>
