Finalization of dialog components prior to public release.
- Replace legacy components with modern UI equivalents for improved consistency and styling.
- Update bindings and enhance button styles to align with the new design system.
- Rename some UI elements and improve async handling of dialogs.
- Adjustments to icon width for improved UI layout.
- Implement countdown feature to match WinForms code, using TimeSpan objects.
- Reduce default UI timeout from 115 minutes to 55 minutes for Intune's sake.
- Removed banner entirely to make the dialogs look more native.
- Miscellaneous formatting improvements across all dialogs.
- Updated PowerShell demonstration scripts in solution folder.

--- a/Sources/PSADT.UserInterface/PSADT.UserInterface/PSADT.UserInterface.csproj
+++ b/Sources/PSADT.UserInterface/PSADT.UserInterface/PSADT.UserInterface.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	  <TargetFrameworks>net462</TargetFrameworks>
@@ -48,19 +48,10 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<Resource Include="Resources\appIcon.ico">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Resource>
 		<Resource Include="Resources\appIcon.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Resource>
 		<Resource Include="Resources\Banner.Classic.png">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Resource>
-		<Resource Include="Resources\Banner.Fluent.Dark.png">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Resource>
-		<Resource Include="Resources\Banner.Fluent.Light.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Resource>
 	</ItemGroup>
@@ -81,6 +72,10 @@
 	  <Pack>True</Pack>
 	  <PackagePath>\</PackagePath>
 	</None>
+  </ItemGroup>
+  
+    <ItemGroup>
+	<Folder Include="Classes\" />
   </ItemGroup>
 
 </Project>
