--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,8 @@
 root = true
 
 [*]
-charset = utf-8
+charset = utf-8-bom
 indent_size = 4
 indent_style = space
+trim_trailing_whitespace = true
+insert_final_newline = true
