- Update all packages used by wpfui to the latest versions.

--- a/lib/wpfui/src/Wpf.Ui.Extension/Wpf.Ui.Extension.csproj
+++ b/lib/wpfui/src/Wpf.Ui.Extension/Wpf.Ui.Extension.csproj
@@ -92,8 +92,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <Version>17.12.40392</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" />
+    <PackageReference Include="Microsoft.VSSDK.BuildTools">
+      <Version>17.12.2069</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="license.txt">
