- Only use the .NET Framework 4.6.2 DLL files with our project.
Because the last minute change to net8.0-windows10.0.17763 before our release dragged Microsoft.Windows.SDK.NET back in, it's ballooned the release size up to an unacceptable level. The .NET Framework DLLs are loadable in PowerShell 7, therefore there's no issue.

We deliberately leave the C# projects compiling for net8.0-windows10.0.17763 targets even if we don't use it to ensure our C# projects remain portable.

--- a/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke-AppDeployToolkit.csproj
+++ b/src/PSADT.Invoke/PSADT.Invoke/PSADT.Invoke-AppDeployToolkit.csproj
@@ -36,7 +36,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\Debug\net462\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -47,7 +47,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>bin\Release\net462\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
